Global prevent for overflow in mobile view

--- a/app/assets/stylesheets/mobile/mobile.css.scss
+++ b/app/assets/stylesheets/mobile/mobile.css.scss
@@ -12,6 +12,11 @@ a {
   text-decoration: none;
 }
 
+code {
+    white-space: normal;
+    word-wrap: break-word;
+  }
+
 body {
   background: {
     image: image-url('texture/hatched-light.jpg');
